# book-esp32c3-iot-projects

./: .gitignore  .gitlab-ci.yml  README.md  README_cn.md  book.toml
device_firmware/1_blink/: README_cn.md
device_firmware/2_light_drivers/: CMakeLists.txt  README_cn.md
device_firmware/3_wifi_connection/: CMakeLists.txt  README_cn.md
device_firmware/4_network_config/: CMakeLists.txt  README_cn.md  sdkconfig.defaults
device_firmware/5_rainmaker/: CMakeLists.txt  README_cn.md
device_firmware/6_project_optimize/: CMakeLists.txt  README_cn.md  partitions.csv  sdkconfig.defaults
device_firmware/6_project_optimize/main/: CMakeLists.txt  app_driver.c  app_main.c
device_firmware/6_project_optimize/main/include/: app_priv.h
device_firmware/7_insights/: CMakeLists.txt  README_cn.md  idf_v4.3.2.patch  partitions.csv  sdkconfig.defaults
phone_app/app_ios/: .gitignore  README.md
src/: SUMMARY.md
src/00/: 00.md
src/01/: 00.md
src/第2章、智能照明设备的整体设计/: 介绍 C3 的基本功能.md
test_case/broadcast_discovery/: CMakeLists.txt  Makefile  README_cn.md  sdkconfig.defaults
test_case/broadcast_discovery/main/: CMakeLists.txt  app_main.c
test_case/coap/: CMakeLists.txt  Makefile  README_cn.md  sdkconfig.defaults
test_case/gatt_server/: CMakeLists.txt  Makefile  README_cn.md  sdkconfig.defaults
test_case/https_server/: CMakeLists.txt  Makefile  README_cn.md
test_case/local_control/: CMakeLists.txt  Makefile  README_cn.md  sdkconfig.defaults
test_case/mdns_discovery/: CMakeLists.txt  Makefile  README_cn.md
test_case/multicast_discovery/: CMakeLists.txt  Makefile  (+1 more)
(+456 files in other folders)
